@@ -17,6 +17,7 @@
 package org.graylog2.rest.resources.users;
 
 import com.codahale.metrics.annotation.Timed;
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
@@ -103,6 +104,7 @@ import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
 import java.net.URI;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -115,6 +117,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -317,12 +320,10 @@ public class UsersResource extends RestResource {
                 builder.roles(userDTO.roles().stream().map(roleNameMap::get).collect(Collectors.toSet()));
             }
             userDTO.authServiceId().ifPresent(
-                    serviceId -> {
-                        builder.authServiceEnabled(activeAuthService.isPresent() && serviceId.equals(activeAuthService.get().id()));
-                    }
+                    serviceId -> builder.authServiceEnabled(activeAuthService.isPresent() && serviceId.equals(activeAuthService.get().id()))
             );
             return builder.build();
-        }).collect(Collectors.toList());
+        }).toList();
 
         final PaginatedList<UserOverviewDTO> userOverviewDTOS = new PaginatedList<>(users, result.pagination().total(),
                 result.pagination().page(), result.pagination().perPage());
@@ -710,6 +711,12 @@ public class UsersResource extends RestResource {
         return TokenList.create(tokenList.build());
     }
 
+    public record GenerateTokenTTL(Optional<Duration> tokenTTL) {
+        public Duration getTTL(Supplier<Duration> defaultSupplier) {
+            return this.tokenTTL.orElseGet(defaultSupplier);
+        }
+    }
+
     @POST
     @Path("{userId}/tokens/{name}")
     @ApiOperation("Generates a new access token for a user")
@@ -717,15 +724,17 @@ public class UsersResource extends RestResource {
     public Token generateNewToken(
             @ApiParam(name = "userId", required = true) @PathParam("userId") String userId,
             @ApiParam(name = "name", value = "Descriptive name for this token (e.g. 'cronjob') ", required = true) @PathParam("name") String name,
-            @ApiParam(name = "JSON Body", value = "Placeholder because POST requests should have a body. Set to '{}', the content will be ignored.", defaultValue = "{}") String body) {
+            @ApiParam(name = "JSON Body", value = "Can optionally contain the token's TTL.", defaultValue = "{\"token_ttl\":null}") GenerateTokenTTL body) {
         final User user = loadUserById(userId);
         final String username = user.getName();
 
-        if (!isPermitted(USERS_TOKENCREATE, username) ||
-                isExternalUserDenied(user)) {
+        if (!isTokenCreationAllowed(user)) {
             throw new ForbiddenException("Not allowed to create tokens for user " + username);
         }
-        final AccessToken accessToken = accessTokenService.create(user.getName(), name);
+        if (body == null) {
+            body = new GenerateTokenTTL(Optional.empty());
+        }
+        final AccessToken accessToken = accessTokenService.create(user.getName(), name, body.getTTL(() -> clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES).defaultTTLForNewTokens()));
 
         return Token.create(accessToken.getId(), accessToken.getName(), accessToken.getToken(), accessToken.getLastAccess());
     }
@@ -757,9 +766,30 @@ public class UsersResource extends RestResource {
         }
     }
 
-    private boolean isExternalUserDenied(User user) {
-        return user.isExternalUser()
-                && !clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES).allowAccessTokenForExternalUsers();
+    @VisibleForTesting
+    boolean isTokenCreationAllowed(User user) {
+        final boolean allowed = isPermitted(USERS_TOKENCREATE, user.getName());
+        final boolean isAdmin = isAdmin(user);
+        if (isAdmin) {
+            return allowed;
+        }
+        final boolean externalAllowed = isExternalUserAllowed(user);
+        final boolean adminAllowed = isAllowedAsNoAdmin(user);
+
+        return allowed && externalAllowed && adminAllowed;
+    }
+
+    private boolean isAdmin(User user) {
+        final String adminRoleId = roleService.getAdminRoleObjectId();
+        return user.getRoleIds().contains(adminRoleId);
+    }
+
+    private boolean isAllowedAsNoAdmin(User user) {
+        return isAdmin(user) || !clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES).restrictAccessTokenToAdmins();
+    }
+
+    private boolean isExternalUserAllowed(User user) {
+        return !user.isExternalUser() || clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES).allowAccessTokenForExternalUsers();
     }
 
     private User loadUserById(String userId) {
@@ -805,8 +835,8 @@ public class UsersResource extends RestResource {
             wildcardPermissions = userManagementService.getWildcardPermissionsForUser(user);
             grnPermissions = userManagementService.getGRNPermissionsForUser(user);
         } else {
-            wildcardPermissions = ImmutableList.of();
-            grnPermissions = ImmutableList.of();
+            wildcardPermissions = List.of();
+            grnPermissions = List.of();
         }
 
         final Optional<AuthServiceBackendDTO> activeAuthService = globalAuthServiceConfig.getActiveBackendConfig();
@@ -856,7 +886,7 @@ public class UsersResource extends RestResource {
 
     private UserOverviewDTO getAdminUserDTO(AllUserSessions sessions) {
         final Optional<User> optionalAdmin = userManagementService.getRootUser();
-        if (!optionalAdmin.isPresent()) {
+        if (optionalAdmin.isEmpty()) {
             return null;
         }
         final User admin = optionalAdmin.get();
